--- a/api/sync_config.json
+++ b/api/sync_config.json
@@ -3,15 +3,39 @@
 	syncStageSchema: "sync_import_stage",
 	originAppLocationCode: "ZBZ_QLM_US_TESTE",
 	syncTableInfo:[
+		  
+				{	
+					tableName: "users",
+					mainParentRefInfo: {tableName: "person"},
+					otherParentRefInfo: [
+											{tableName: "users", referenceColumnName: "creator", referencedColumnName: "user_id", notIgnorable : true},
+											{tableName: "users", referenceColumnName: "changed_by", referencedColumnName: "user_id"},
+											{tableName: "users", referenceColumnName: "retired_by", referencedColumnName: "user_id"}
+											
+										],
+					mustRecompileTable: true
+				},
 		
-		{
-			tableName: "location",
-			mainParentRefInfo: {tableName: "users", referenceColumnName: "creator", referencedColumnName: "user_id"},
-			otherParentRefInfo: null,
-			mustRecompileTable: false,
-			extraConditionForExport: "exists (select encounter_id from encounter where encounter.location_id = location.location_id)"
-		}
-
+				{
+					tableName: "location",
+					mainParentRefInfo: {tableName: "users", referenceColumnName: "creator", referencedColumnName: "user_id"},
+					otherParentRefInfo: [
+						{tableName: "location", referenceColumnName: "parent_location", referencedColumnName: "location_id"},
+						{tableName: "users", referenceColumnName: "changed_by", referencedColumnName: "user_id"},
+						{tableName: "users", referenceColumnName: "retired_by", referencedColumnName: "user_id"}
+					],
+					mustRecompileTable: true,
+					extraConditionForExport: "exists (select encounter_id from encounter where encounter.location_id : location.location_id)"
+				},
+		
+				{
+					tableName: "person",
+					mainParentRefInfo: {tableName: "users", referenceColumnName: "creator", referencedColumnName: "user_id"},
+					otherParentRefInfo: [
+											{tableName: "users", referenceColumnName: "changed_by", referencedColumnName: "user_id"},
+											{tableName: "users", referenceColumnName: "voided_by", referencedColumnName: "user_id"}
+										],
+					mustRecompileTable: true
+				}
 	]
 }
-		
