--- a/api/sync_config.json
+++ b/api/sync_config.json
@@ -6,35 +6,38 @@
 		  
 				{	
 					tableName: "users",
-					mainParentRefInfo: {tableName: "person"},
-					otherParentRefInfo: [
-											{tableName: "users", referenceColumnName: "creator", referencedColumnName: "user_id", notIgnorable : true},
-											{tableName: "users", referenceColumnName: "changed_by", referencedColumnName: "user_id"},
-											{tableName: "users", referenceColumnName: "retired_by", referencedColumnName: "user_id"}
-											
-										],
+					parents: ["person", "users"],
 					mustRecompileTable: true
 				},
 		
 				{
 					tableName: "location",
-					mainParentRefInfo: {tableName: "users", referenceColumnName: "creator", referencedColumnName: "user_id"},
-					otherParentRefInfo: [
-						{tableName: "location", referenceColumnName: "parent_location", referencedColumnName: "location_id"},
-						{tableName: "users", referenceColumnName: "changed_by", referencedColumnName: "user_id"},
-						{tableName: "users", referenceColumnName: "retired_by", referencedColumnName: "user_id"}
-					],
+					parents: ["users", "location"],
 					mustRecompileTable: true,
-					extraConditionForExport: "exists (select encounter_id from encounter where encounter.location_id : location.location_id)"
+					extraConditionForExport: "exists (select encounter_id from encounter where encounter.location_id = location.location_id)"
 				},
 		
 				{
 					tableName: "person",
-					mainParentRefInfo: {tableName: "users", referenceColumnName: "creator", referencedColumnName: "user_id"},
-					otherParentRefInfo: [
-											{tableName: "users", referenceColumnName: "changed_by", referencedColumnName: "user_id"},
-											{tableName: "users", referenceColumnName: "voided_by", referencedColumnName: "user_id"}
-										],
+					parents: ["users"],
+					mustRecompileTable: true
+				},
+				
+				{
+					tableName: "person_address",
+					parents: ["person", "users"],
+					mustRecompileTable: true
+				},
+				
+				{
+					tableName: "person_attribute",
+					parents: ["person", "users"],
+					mustRecompileTable: true
+				},
+				
+				{
+					tableName: "person_name",
+					parents: ["person", "users"],
 					mustRecompileTable: true
 				}
 	]
