--- a/api/sync_config.json
+++ b/api/sync_config.json
@@ -2,27 +2,25 @@
 	syncRootDirectory: "/home/jpboane/working/prg/jee/workspace/data/sync",
 	syncStageSchema: "sync_import_stage",
 	originAppLocationCode: "ZBZ_PEBANE",
-	defaultQtyRecordsPerSelect: 2500,
+	defaultQtyRecordsPerSelect: 1000,
 	firstExport: true,
+	doIntegrityCheckInTheEnd: true,
 	defaultQtyProcessingEngine: 1,
 	connInfo: {
 		dataBaseUserName: "root",
 		dataBaseUserPassword: "root",
-		connectionURI: "jdbc:mysql://localhost:3307/openmrs_pebane?autoReconnect=true&sessionVariables=storage_engine=InnoDB&useUnicode=true&ch",
+		connectionURI: "jdbc:mysql://localhost:3307/openmrs_module_eptssync_test?autoReconnect=true&sessionVariables=storage_engine=InnoDB&useUnicode=true&ch",
 		driveClassName: "com.mysql.jdbc.Driver"
 	},
 	bkpConn:{
 			connectionURI: "jdbc:mysql://localhost:3307/openmrs_module_eptssync_test?autoReconnect=true&sessionVariables=storage_engine=InnoDB&useUnicode=true&ch"
 	},
 	syncTableInfo:[
-		  
-				
 		{
-			tableName: "obs",
-			parents: ["person", "location", "orders", "obs", "users", "encounter"],
-			mustRecompileTable: true,
-			qtyProcessingEngine: 3,
-			qtyRecordsPerSelect: 50000
-		}				
+			tableName: "patient",
+			sharePkWith: "person",
+			parents: ["person", "users"],
+			mustRecompileTable: true
+		}		
 	]
 }
