Operation Configuration more transparent

--- a/api/sync_config_dest.json
+++ b/api/sync_config_dest.json
@@ -11,13 +11,20 @@
 	
 	operations: [
 		{
-			operationType: synchronization,
+			operationType: "synchronization",
 			defaultQtyRecordsPerSelect: 10000,
 			defaultQtyRecordsPerEngine: 100000,
-			doIntegrityCheckInTheEnd: true
+			doIntegrityCheckInTheEnd: true,
+		
+			relatedOperationToBeRunInTheEnd: {
+				operationType: "consolidation",
+				defaultQtyRecordsPerSelect: 10000,
+				defaultQtyRecordsPerEngine: 100000
+			}
+		
 		},
 		{
-			operationType: load,
+			operationType: "load",
 			defaultQtyRecordsPerSelect: 1,
 			defaultQtyRecordsPerEngine: 10
 		}
