--- a/api/sync_config_source_minimal.json
+++ b/api/sync_config_source_minimal.json
@@ -3,37 +3,41 @@
 	syncRootDirectory: "/home/jpboane/working/prg/jee/workspace/data/sync",
 	syncStageSchema: "sync_import_stage",
 	mustCreateStageSchemaElements:false,
-	originAppLocationCode: "ZBZ_PEBANE",
+	originAppLocationCode: "zbz_pebane",
 	firstExport: true,
-	mustRecompileTable: true,
-	mustCreateClasses: true,
+	mustRecompileTable: false,
+	mustCreateClasses: false,
 	classpackage: "sourcepkg",
+	
 	operations: [
 		{
-			operationType: export,
-			defaultQtyRecordsPerSelect: 10000,
-			defaultQtyRecordsPerEngine: 100000
+			operationType: "export",
+			defaultQtyRecordsPerSelect: 10,
+			defaultQtyRecordsPerEngine: 100000,
+			disabled: true
 		},
+		
 		{
-			operationType: transport,
+			operationType: "transport",
 			defaultQtyRecordsPerSelect: 1,
-			defaultQtyRecordsPerEngine: 10
+			defaultQtyRecordsPerEngine: 10,
+			disabled: false
 		}
 	],
+	
 	connInfo: {
 		dataBaseUserName: "root",
 		dataBaseUserPassword: "root",
 		connectionURI: "jdbc:mysql://10.10.2.2:3307/openmrs_pebane?autoReconnect=true&sessionVariables=storage_engine=InnoDB&useUnicode=true&ch",
 		driveClassName: "com.mysql.jdbc.Driver"
 	},
+	
 	syncTableInfo:[
 		  
-		{
-			tableName: "obs",
-			parents: ["person", "location", "orders", "obs", "users", "encounter"],
-			mustRecompileTable: true,
-			qtyProcessingEngine: 1
-		}	
-				
+		{	
+			tableName: "users",
+			parents: ["person", "users"],
+			mustRecompileTable: true
+		}
 	]
 }
