--- a/api/sync_config_dest_minimal.json
+++ b/api/sync_config_dest_minimal.json
@@ -5,8 +5,8 @@
 	syncStageSchema: "sync_import_stage",
 	originAppLocationCode: "CENTRAL_DB",
 	firstExport: true,
-	mustCreateClasses: true,
-	mustRecompileTable: true,
+	mustCreateClasses: false,
+	mustRecompileTable: false,
 	classpackage: "destinationpkg",
 	
 	operations: [
@@ -15,33 +15,36 @@
 			defaultQtyRecordsPerSelect: 10000,
 			defaultQtyRecordsPerEngine: 100000,
 			doIntegrityCheckInTheEnd: true,
+			disabled: false,
 			
 			relatedOperationToBeRunInTheEnd: {
 				operationType: "consolidation",
 				defaultQtyRecordsPerSelect: 10000,
-				defaultQtyRecordsPerEngine: 100000
+				defaultQtyRecordsPerEngine: 100000,
+				doIntegrityCheckInTheEnd: true	
 			}
 		},
 		{
 			operationType: "load",
 			defaultQtyRecordsPerSelect: 1,
-			defaultQtyRecordsPerEngine: 10
+			defaultQtyRecordsPerEngine: 10,
+			disabled: false
 		}
 	],
 	
 	connInfo: {
 		dataBaseUserName: "root",
 		dataBaseUserPassword: "root",
-		connectionURI: "jdbc:mysql://10.10.2.2:3307/openmrs_module_eptssync_test?autoReconnect=true&sessionVariables=storage_engine=InnoDB&useUnicode=true&ch",
+		connectionURI: "jdbc:mysql://localhost:3307/openmrs_module_eptssync_test?autoReconnect=true&sessionVariables=storage_engine=InnoDB&useUnicode=true&ch",
 		driveClassName: "com.mysql.jdbc.Driver"
 	},
 	syncTableInfo:[
-		{
-			tableName: "obs",
-			parents: ["person", "location", "orders", "obs", "users", "encounter"],
+		{	
+			tableName: "users",
+			parents: ["person", "users"],
 			mustRecompileTable: true,
-			qtyProcessingEngine: 10
-		}	
+			qtyRecordsPerSelect: 1000
+		}
 	]
 }
 
