--- a/api/bin/src/main/resources/log4j.properties
+++ b/api/bin/src/main/resources/log4j.properties
@@ -11,13 +11,13 @@ log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c{1} %x - %m%n
 
 #log4j.appender.FILE.File=/home/epts/prg/sync/sync_log.log
 #log4j.appender.FILE.File=/home/jpboane/working/prg/jee/workspace/sync_log.log
-#log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-#log4j.appender.FILE.layout.ConversionPattern=%-4r [%t] %-5p %c{1} %x - %m%n
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern=%-4r [%t] %-5p %c{1} %x - %m%n
 
-#log4j.appender.FILE.ImmediateFlush=true
-#log4j.appender.FILE.Threshold=debug
+log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.FILE.Threshold=debug
 
-#log4j.appender.FILE.Append=false
+log4j.appender.FILE.Append=false
 
 # Print only messages of level WARN or above in the package com.foo.
 log4j.logger.com.foo=WARN
