Solved a bug causing operation engine not stopping

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -117,6 +117,12 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.5</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.tomcat</groupId>
+		    <artifactId>tomcat-jdbc</artifactId>
+		    <version>7.0.35</version>
+		</dependency>
 	</dependencies>
 	
 	
