Resolved issue in updating operation status on the status page

--- a/api/src/main/resources/source_sync_config.json
+++ b/api/src/main/resources/source_sync_config.json
@@ -1,6 +1,6 @@
 {
   "syncRootDirectory" : "/home/jpboane/working/prg/jee/workspace/data/sync",
-  "originAppLocationCode" : "molocue",
+  "originAppLocationCode" : "cs_mopeia",
   "tablesConfigurations" : [ {
     "tableName" : "concept",
     "parents" : [ {
@@ -597,5 +597,5 @@
   "childConfigFilePath" : null,
   "disabled" : false,
   "classPath" : "/home/jpboane/working/prg/jee/workspace/w02/openmrs-module-eptssync/api/target/eptssync-api-1.0-SNAPSHOT.jar",
-  "syncStageSchema" : "molocue_sync_stage_area"
+  "syncStageSchema" : "cs_mopeia_sync_stage_area"
 }
