More refactor on progress meter

--- a/api/src/main/resources/source_sync_config.json
+++ b/api/src/main/resources/source_sync_config.json
@@ -590,7 +590,7 @@
       "sourceFolders" : null
     },
     "disabled" : false,
-    "processingMode" : "parallel",
+    "processingMode" : "sequencial",
     "sourceFolders" : null
   } ],
   "automaticStart" : true,
