--- a/api/src/main/resources/source_sync_config.json
+++ b/api/src/main/resources/source_sync_config.json
@@ -1,6 +1,6 @@
 {
-  "syncRootDirectory" : "/home/jpboane/working/prg/jee/workspace/data/sync",
-  "originAppLocationCode" : "molocue",
+  "syncRootDirectory" : "D:\\JEE\\Workspace\\FGH\\data\\sync",
+  "originAppLocationCode" : "cs_gurue",
   "tablesConfigurations" : [ {
     "tableName" : "concept",
     "parents" : [ {
@@ -533,12 +533,47 @@
     "metadata" : true,
     "removeForbidden" : false,
     "disabled" : false
+  }, {
+    "tableName" : "cohort",
+    "parents" : [ {
+      "defaultValueDueInconsistency" : 1,
+      "tableName" : "users",
+      "ignorable" : false
+    } ],
+    "sharePkWith" : null,
+    "extraConditionForExport" : null,
+    "metadata" : false,
+    "removeForbidden" : false,
+    "disabled" : false
+  }, {
+    "tableName" : "cohort_member",
+    "parents" : [ {
+      "defaultValueDueInconsistency" : 1,
+      "tableName" : "users",
+      "ignorable" : false
+    }, {
+      "defaultValueDueInconsistency" : 0,
+      "tableName" : "cohort",
+      "ignorable" : false
+    },
+    {
+      "defaultValueDueInconsistency" : 0,
+      "tableName" : "patient",
+      "refColumnName": "patient_id",
+      "refColumnType": "int",
+      "ignorable" : false
+    }  ],
+    "sharePkWith" : null,
+    "extraConditionForExport" : null,
+    "metadata" : false,
+    "removeForbidden" : false,
+    "disabled" : false
   } ],
   "firstExport" : true,
   "connInfo" : {
     "dataBaseUserName" : "root",
     "dataBaseUserPassword" : "root",
-    "connectionURI" : "jdbc:mysql://localhost:3307/openmrs?autoReconnect=true&amp;sessionVariables=storage_engine=InnoDB&amp;useUnicode=true&amp;characterEncoding=UTF-8",
+    "connectionURI" : "jdbc:mysql://197.242.174.114:33070/openmrs_gurue?autoReconnect=true&amp;sessionVariables=storage_engine=InnoDB&amp;useUnicode=true&amp;characterEncoding=UTF-8",
     "driveClassName" : "com.mysql.jdbc.Driver"
   },
   "installationType" : "source",
@@ -573,11 +608,11 @@
             "minRecordsPerEngine" : 50,
             "doIntegrityCheckInTheEnd" : false,
             "child" : null,
-            "disabled" : true,
+            "disabled" : false,
             "processingMode" : "sequencial",
             "sourceFolders" : null
           },
-          "disabled" : true,
+          "disabled" : false,
           "processingMode" : "sequencial",
           "sourceFolders" : null
         },
@@ -596,6 +631,6 @@
   "automaticStart" : true,
   "childConfigFilePath" : null,
   "disabled" : false,
-  "classPath" : "/home/jpboane/working/prg/jee/workspace/w02/openmrs-module-eptssync/api/target/eptssync-api-1.0-SNAPSHOT.jar",
-  "syncStageSchema" : "cs_mopeia_sync_stage_area"
+  "classPath" : "D://JEE//Workspace//FGH//openmrs-module-eptssync//api//target//eptssync-api-1.0-SNAPSHOT.jar",
+  "syncStageSchema" : "cs_gurue_sync_stage_area"
 }
