Added the initial logic of EIP re-sync records

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,6 +15,11 @@
 	<name>Epts Synchronize Module API</name>
 	<description>API project for EptsSynchronize</description>
 
+	
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+		
 	<dependencies>
 	
 		<!-- 
@@ -128,6 +133,12 @@
 		    <groupId>org.apache.tomcat</groupId>
 		    <artifactId>tomcat-jdbc</artifactId>
 		    <version>7.0.35</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>fgh.spi</groupId>
+		    <artifactId>spi-changedrecordsdetector</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	
